# management-bookmarks

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .gitignore  Cargo.toml
apps/api/migrations/: 20251225172734_create_initial_tables.down.sql  20251225172734_create_initial_tables.up.sql
apps/api/src/: main.rs
apps/web/app/: page.tsx
